--- a/package.json
+++ b/package.json
@@ -1,27 +1,51 @@
 {
-  "name": "qulisoft-gallery-native",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "expo": "~44.0.0",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
-    "typescript": "~4.3.5"
-  },
-  "private": true
+   "name": "qulisoft-gallery-native",
+   "version": "1.0.0",
+   "main": "node_modules/expo/AppEntry.js",
+   "scripts": {
+      "start": "expo start",
+      "android": "expo start --android",
+      "ios": "expo start --ios",
+      "web": "expo start --web",
+      "eject": "expo eject"
+   },
+   "dependencies": {
+      "@react-navigation/native": "^6.0.10",
+      "@react-navigation/native-stack": "^6.6.1",
+      "@reduxjs/toolkit": "^1.8.1",
+      "axios": "^0.26.1",
+      "expo": "~44.0.0",
+      "expo-status-bar": "~1.2.0",
+      "react": "17.0.1",
+      "react-dom": "17.0.1",
+      "react-native": "0.64.3",
+      "react-native-safe-area-context": "^4.2.4",
+      "react-native-screens": "^3.13.1",
+      "react-native-web": "0.17.1",
+      "react-redux": "^8.0.1",
+      "redux": "^4.2.0"
+   },
+   "devDependencies": {
+      "@babel/core": "^7.12.9",
+      "@types/react": "~17.0.21",
+      "@types/react-native": "~0.64.12",
+      "babel-core": "^7.0.0-bridge.0",
+      "babel-eslint": "^10.1.0",
+      "babel-preset-airbnb": "^5.0.0",
+      "babel-preset-react-native": "^4.0.1",
+      "eslint": "^8.14.0",
+      "eslint-config-airbnb": "^19.0.4",
+      "eslint-config-prettier": "^8.5.0",
+      "eslint-plugin-import": "^2.26.0",
+      "eslint-plugin-jsx-a11y": "^6.5.1",
+      "eslint-plugin-prettier": "^4.0.0",
+      "eslint-plugin-react": "^7.29.4",
+      "eslint-plugin-react-hooks": "^4.4.0",
+      "eslint-plugin-react-native": "^4.0.0",
+      "eslint-watch": "^8.0.0",
+      "prettier": "^2.6.2",
+      "prettier-eslint": "^14.0.0",
+      "typescript": "~4.3.5"
+   },
+   "private": true
 }
